[gd_scene load_steps=39 format=3 uid="uid://bms5r0fhbolsa"]

[ext_resource type="Script" uid="uid://bapoo2lhd2k6u" path="res://scripts/characterScripts/ai/shortai.gd" id="1_628j0"]
[ext_resource type="Texture2D" uid="uid://do6eqnpgajtf8" path="res://assets/dusmanlar.png" id="2_iehky"]

[sub_resource type="AtlasTexture" id="AtlasTexture_taf8q"]
atlas = ExtResource("2_iehky")
region = Rect2(0, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdsyp"]
atlas = ExtResource("2_iehky")
region = Rect2(33, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi668"]
atlas = ExtResource("2_iehky")
region = Rect2(66, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_oelei"]
atlas = ExtResource("2_iehky")
region = Rect2(99, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ausm4"]
atlas = ExtResource("2_iehky")
region = Rect2(132, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjs74"]
atlas = ExtResource("2_iehky")
region = Rect2(165, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tqo0"]
atlas = ExtResource("2_iehky")
region = Rect2(198, 136, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ld1k"]
atlas = ExtResource("2_iehky")
region = Rect2(0, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7juxo"]
atlas = ExtResource("2_iehky")
region = Rect2(33, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wh3c"]
atlas = ExtResource("2_iehky")
region = Rect2(66, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vukam"]
atlas = ExtResource("2_iehky")
region = Rect2(99, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mny"]
atlas = ExtResource("2_iehky")
region = Rect2(132, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnxd2"]
atlas = ExtResource("2_iehky")
region = Rect2(165, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnev2"]
atlas = ExtResource("2_iehky")
region = Rect2(198, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehtbo"]
atlas = ExtResource("2_iehky")
region = Rect2(231, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_holm1"]
atlas = ExtResource("2_iehky")
region = Rect2(264, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxmgi"]
atlas = ExtResource("2_iehky")
region = Rect2(297, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_r830r"]
atlas = ExtResource("2_iehky")
region = Rect2(330, 170, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_85j0j"]
atlas = ExtResource("2_iehky")
region = Rect2(0, 68, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo6g6"]
atlas = ExtResource("2_iehky")
region = Rect2(33, 68, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvdjh"]
atlas = ExtResource("2_iehky")
region = Rect2(66, 68, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_37afn"]
atlas = ExtResource("2_iehky")
region = Rect2(99, 68, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wieei"]
atlas = ExtResource("2_iehky")
region = Rect2(0, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbqhd"]
atlas = ExtResource("2_iehky")
region = Rect2(33, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_npfll"]
atlas = ExtResource("2_iehky")
region = Rect2(66, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_al75f"]
atlas = ExtResource("2_iehky")
region = Rect2(99, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn2si"]
atlas = ExtResource("2_iehky")
region = Rect2(132, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjbc5"]
atlas = ExtResource("2_iehky")
region = Rect2(165, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_oseq4"]
atlas = ExtResource("2_iehky")
region = Rect2(198, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_aakvd"]
atlas = ExtResource("2_iehky")
region = Rect2(231, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcxd7"]
atlas = ExtResource("2_iehky")
region = Rect2(264, 34, 33, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_js5uq"]
atlas = ExtResource("2_iehky")
region = Rect2(297, 34, 33, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_xa1ui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_taf8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdsyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi668")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oelei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ausm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjs74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tqo0")
}],
"loop": true,
"name": &"enemy_1_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ld1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7juxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wh3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vukam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnxd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnev2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehtbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxmgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r830r")
}],
"loop": true,
"name": &"enemy_2_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85j0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo6g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvdjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37afn")
}],
"loop": true,
"name": &"enemy_3_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wieei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbqhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npfll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al75f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn2si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjbc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oseq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aakvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcxd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js5uq")
}],
"loop": true,
"name": &"enemy_4_idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iehky"]

[sub_resource type="CircleShape2D" id="CircleShape2D_taf8q"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rdsyp"]
radius = 199.09

[node name="Shortai" type="Node2D"]

[node name="shortai" type="CharacterBody2D" parent="."]
script = ExtResource("1_628j0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="shortai"]
sprite_frames = SubResource("SpriteFrames_xa1ui")
animation = &"enemy_4_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="shortai"]
shape = SubResource("RectangleShape2D_iehky")

[node name="attack_area" type="Area2D" parent="shortai"]

[node name="coll" type="CollisionShape2D" parent="shortai/attack_area"]
shape = SubResource("CircleShape2D_taf8q")
debug_color = Color(0.980507, 0, 0.379082, 0.42)

[node name="detect_area" type="Area2D" parent="shortai"]

[node name="coll" type="CollisionShape2D" parent="shortai/detect_area"]
shape = SubResource("CircleShape2D_rdsyp")
debug_color = Color(0.414746, 0.605352, 3.85046e-07, 0.42)

[node name="attackCooldown" type="Timer" parent="shortai"]

[connection signal="body_entered" from="shortai/attack_area" to="shortai" method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="shortai/attack_area" to="shortai" method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="shortai/detect_area" to="shortai" method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="shortai/detect_area" to="shortai" method="_on_detect_area_body_exited"]
[connection signal="timeout" from="shortai/attackCooldown" to="shortai" method="_on_attack_cooldown_timeout"]
